# osu-rs

./: .gitignore  Cargo.toml  README.md
osu-rs-bin/: Cargo.toml
osu-rs-bin/src/: main.rs
osu-rs-derive/: Cargo.toml
osu-rs-derive/src/: lib.rs
src/: beatmap.rs  error.rs  lib.rs  parsers.rs  skin.rs  util.rs
src/parsers/: beatmap.rs  mod.rs  skin.rs
