[package]
name = "osu-rs"
version = "0.3.0-alpha.1"
edition.workspace = true
readme = "README.md"
authors.workspace = true
description = "A crate for reading osu! beatmaps"
repository.workspace = true
license.workspace = true
keywords = ["osu", "parser"]
categories = ["parser-implementations"]

[workspace]
members = ["osu-rs-derive", "osu-rs-bin"]

[workspace.package]
edition = "2021"
authors = ["chayleaf <chayleaf-cratesio@pavluk.org>"]
repository = "https://github.com/chayleaf/osu-rs/"
license = "MIT"


[dependencies]
thiserror = "2.0.3"
osu-rs-derive = { version = "0.2.0-alpha.1", path = "./osu-rs-derive" }
bitflags = "2.6.0"
memchr = "2.7.4"
